[package]
name = "examples_common_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
avian_derive = { path = "../../avian_derive", version = "0.1" }
bevy = { version = "0.14", default-features = false }
bevy_math = { version = "0.14" }
libm = { version = "0.2", optional = true }
parry3d = { version = "0.15", optional = true }
parry3d-f64 = { version = "0.15", optional = true }
nalgebra = { version = "0.32.6", features = [
    "convert-glam027",
], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
derive_more = "0.99"
indexmap = "2.0.0"
fxhash = "0.2.1"
itertools = "0.13"
bitflags = "2.5.0"

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_gltf"] }
examples_common_3d = { path = "../examples_common_3d" }
benches_common_3d = { path = "../benches_common_3d" }
bevy_math = { version = "0.14", features = ["approx"] }
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.0"
